@@ -57,7 +57,7 @@ void PeriodogramDisplay::work(void)
 
         //power bins to points on the curve
         CArray fftBins(floatBuff.as<const std::complex<float> *>(), this->numFFTBins());
-        const auto powerBins = fftPowerSpectrum(fftBins, _window.call<std::vector<double>>("window"), _window.call<double>("power"));
+        const auto powerBins = _fftPowerSpectrum.transform(fftBins);
         if (not _queueDepth[index]) _queueDepth[index].reset(new std::atomic<size_t>(0));
         _queueDepth[index]->fetch_add(1);
         QMetaObject::invokeMethod(this, "handlePowerBins", Qt::QueuedConnection, Q_ARG(int, index), Q_ARG(std::valarray<float>, powerBins));
