@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Plotters toolkit.
 Release 0.1.0 (pending)
 ==========================
 
+- Use Spuce window designer in the FFT power spectrum
 - Handle empty version string from FindQwt result
 - Created Qwt widgets module for widgets that require Qwt
 - Moved plotters and qwt widgets from pothos-widgets toolkit
